# horseracing

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  DATA_PIPELINE.md  DECISIONS.md  Horse_Racing_System_Master_Reference.md  LICENSE  PROGRESS.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: __init__.py  cards.py  ingest.py  portfolio.py
app/core/: config.py  logging.py
app/db/: __init__.py  models.py  persistence.py  session.py
app/schemas/: bets.py  provenance.py  race.py
app/services/calibration/: calibrator.py  drift.py
app/services/ev_engine/: calculator.py  market_impact.py
app/services/feature_engineering/: __init__.py  class_features.py  connections.py  engine.py  layoff.py  pace_features.py  speed_features.py
app/services/feedback/: __init__.py  outcomes.py  portfolio_drift.py
app/services/inference/: __init__.py  pipeline.py
app/services/models/: __init__.py  connections.py  market.py  meta_learner.py  pace_scenario.py  sequence.py  speed_form.py  training_data.py
app/services/ordering/: copula.py  plackett_luce.py  stern.py
app/services/pdf_parser/: brisnet_parser.py  cleaner.py  equibase_parser.py  extractor.py  llm_parser.py
app/services/portfolio/: optimizer.py  sizing.py
data/cleaned/ahmedabdulhamid__horse-racing/rejected/: all.parquet  reasons.jsonl
data/cleaned/felipetappata__thoroughbred-races-in-argentina/rejected/: all.parquet  reasons.jsonl
data/cleaned/gdaley__hkracing/rejected/: all.parquet  reasons.jsonl
data/cleaned/gdaley__horseracing-in-hk/rejected/: all.parquet
data/cleaned/lantanacamara__hong-kong-horse-racing/rejected/: all.parquet  reasons.jsonl
data/cleaned/mexwell__hong-kong-jockey-club-and-singapore-turfclub/rejected/: all.parquet
data/cleaned/noqcks__woodbine-races/rejected/: all.parquet  reasons.jsonl
data/cleaned/prashant111__horse-racing-tipster-bets/rejected/: all.parquet
data/cleaned/takamotoki__jra-horse-racing-dataset/rejected/: all.parquet  reasons.jsonl
docs/superpowers/plans/: 2026-05-13-phase-5a-ev-engine.md
frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/card/[id]/: page.tsx
frontend/app/card/[id]/portfolio/: page.tsx
frontend/components/BetTicket/: BetTicket.tsx  BetTicketRow.tsx
frontend/components/EVGauge/: EVGauge.tsx
frontend/components/HorseTable/: HorseRow.tsx  HorseTable.tsx
frontend/components/ParetoCurve/: ParetoCurve.tsx  RiskSlider.tsx
frontend/components/ProbabilityBar/: ProbabilityBar.tsx
frontend/components/ProvenanceBanner/: ProvenanceBanner.tsx
frontend/components/RaceCard/: RaceHeader.tsx  RaceTabs.tsx
frontend/lib/: api.ts  format.ts  mock.ts  types.ts
models/baseline_full/: summary.json
models/baseline_full/calibration/: summary.json
models/baseline_full/calibration/meta_learner/: metadata.json  report.json
models/baseline_full/calibration/speed_form/: metadata.json  report.json
models/baseline_full/calibration_adr038/: summary.json
models/baseline_full/calibration_adr038/meta_learner/: metadata.json  report.json
models/baseline_full/calibration_adr038/speed_form/: metadata.json  report.json
models/baseline_full/calibration_adr038_brier/: summary.json
models/baseline_full/calibration_adr038_brier/meta_learner/: metadata.json  report.json
models/baseline_full/calibration_adr038_brier/speed_form/: metadata.json  report.json
models/baseline_full/connections/: model.json
models/baseline_full/ev_engine/phase-5b-smoke-001/: report.json
models/baseline_full/ev_engine/smoke-test-001/: report.json
models/baseline_full/market/: model.json
models/baseline_full/meta_learner/: booster.txt  metadata.json
models/baseline_full/speed_form/: booster.txt  metadata.json
models/smoke_test/: summary.json
models/smoke_test/connections/: model.json
models/smoke_test/market/: model.json
models/smoke_test/meta_learner/: booster.txt
models/smoke_test/speed_form/: booster.txt  metadata.json
scripts/: bootstrap_models.py  quick_bootstrap.py  rolling_retrain.py  run_phase0_pipeline.sh  smoke_phase5b_optimizer.py  validate_calibration.py  validate_phase5a_ev_engine.py
scripts/db/: auto_ingest.py  backfill_tracks.py  constants.py  dedup.py  dedup_report.py  evaluate_dataset.py  export_training_data.py  field_maps.py  ingest_kaggle.py  load_to_db.py  map_and_clean.py  preprocessors.py  quality_gate.py  schema.sql  schemas.py  setup_db.py  transformers.py
tests/: conftest.py
tests/test_api/: test_cards.py  test_ingest.py  test_pareto.py  test_portfolio.py  test_provenance.py
tests/test_calibration/: test_calibrator.py  test_drift.py  test_validate_calibration.py
tests/test_db/: test_backfill_tracks.py  test_dedup.py  test_pipeline.py  test_quality_gate.py  test_transformers.py
tests/test_ev_engine/: test_calculator.py  test_market_impact.py
tests/test_features/: _fixtures.py  test_class_features.py  test_connections.py  test_engine.py  test_layoff.py  test_pace_features.py  test_speed_features.py
tests/test_feedback/: test_outcomes.py  test_portfolio_drift.py
tests/test_inference/: test_pipeline.py
tests/test_models/: _synth.py  test_connections.py  test_market.py  test_pace_scenario.py  test_quick_bootstrap.py  test_sequence.py  test_speed_form.py  test_training_data.py
tests/test_ordering/: test_copula.py  test_plackett_luce.py  test_stern.py
tests/test_parser/: test_brisnet_parser.py  test_cleaner.py  test_extractor.py  test_llm_parser.py  test_ocr.py
tests/test_portfolio/: test_optimizer.py  test_sizing.py
tests/test_schemas/: test_bets.py
tests/test_scripts/: test_rolling_retrain.py
