[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "horseracing"
version = "0.1.0"
description = "Pari-mutuel wagering analytics system — PDF ingestion, ensemble ML, CVaR portfolio optimization."
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }

# Runtime dependencies for the PDF ingestion pipeline (Phase 1) and the
# Phase 0 data pipeline (scripts/db/). Heavier ML deps (lightgbm, torch,
# scipy) are added in later phases.
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "pdfplumber>=0.11",
    "pypdf>=4.2",
    # Phase 0 — Kaggle ingestion + tabular data handling.
    "kaggle>=1.6",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "numpy>=1.26",
    # Phase 1 — live API + storage layer.
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    # SQLAlchemy's async layer (`sqlalchemy.ext.asyncio`) requires the
    # `greenlet` package. On py3.11/3.12, `sqlalchemy[asyncio]` pulls it
    # transitively; on py3.13/3.14 the wheel-selection logic has shifted
    # and greenlet is sometimes left out of the resolved set, producing
    # `ValueError: the greenlet library is required to use this function`
    # the first time any AsyncSession is used. Pin it explicitly. (ADR-045)
    "greenlet>=3.0",
    # Phase 3 — gradient-boosted baseline + classical ML utilities.
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    # Phase 4 — calibration + Plackett-Luce MLE + reliability diagrams.
    "scipy>=1.12",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "reportlab>=4.0",        # build small PDFs for extractor tests
    "httpx>=0.27",           # FastAPI TestClient backend
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:pdfplumber.*",
    "ignore::DeprecationWarning:pypdf.*",
]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"
